--- a/data/posts/brave-rewards.mdx
+++ b/data/posts/brave-rewards.mdx
@@ -1,6 +1,6 @@
 ---
 title: Adding Brave Rewards To NextJS Blog or Website
-date: '2021-08-09'
+date: '08/08/21'
 description: How do you add brave rewards to your website or blog, when adding well-known folder didn't work
 keywords: javascript, react, misc, analytics, brave, ads, brave-creators
 bannerUrl: https://cryptoradar.org/wp-content/uploads/2019/08/Brave-logo.png
