fix web workers

--- a/data/posts/brave-rewards.mdx
+++ b/data/posts/brave-rewards.mdx
@@ -3,7 +3,7 @@ title: Adding Brave Rewards To NextJS Blog or Website
 date: '08/08/21'
 description: How do you add brave rewards to your website or blog, when adding well-known folder didn't work
 keywords: javascript, react, misc, analytics, brave, ads, brave-creators
-bannerUrl: https://cryptoradar.org/wp-content/uploads/2019/08/Brave-logo.png
+bannerUrl: static/images/brave-rewards/banner.png
 bannerCredit: Photo by [Brave](https://brave.com/) on [cryptoangar.org](https://cryptoradar.org/wp-content/uploads/2019/08/Brave-logo.png)
 ---
 
