add ssr hook, improve snippets page

--- a/data/snippets/useEmailQueryParam.mdx
+++ b/data/snippets/useEmailQueryParam.mdx
@@ -2,6 +2,7 @@
 title: 'useEmailQueryParam()'
 description: 'Parse an email from a URL.'
 keywords: javascript, react, nextjs
+tools: [javascript, react]
 logo: null
 ---
 
