--- a/data/posts/analytics.mdx
+++ b/data/posts/analytics.mdx
@@ -12,9 +12,9 @@ bannerCredit: Photo by [6VRC](https://www.deviantart.com/6vcr) on
 
 <SectionWrapper title="intro analytics, counter.dev">
 
-## INTRO
+## There are many options
 
-<br />
+#### And most of them provide more than you actually need
 
 So, you are thinking about adding analytics in your app but are not sure,
 what is going to be your best option. Some of the options are paid, some are free.
@@ -22,21 +22,24 @@ Google doesn't seem to be attractive to you.
 
 <br />
 
-You should really look into [counter.dev](https://counter.dev/)
+You should look into [counter.dev](https://counter.dev/),
+here's the [github](https://github.com/ihucos/counter.dev) page.
 
 <br />
 
-You can also check out their [github](https://github.com/ihucos/counter.dev)
+It's an open source project, privacy focused solution, they do not collect any user data,
+but they do provide a hosted solution to see your analytics results.
+And it's totally possible to fork it and host it on your own.
 
 <br />
-
-It's an open source project, they don't collect personal data,
-as well as host their own service, although it is totally
-possible to fork it and host it on your own.
 
 Although I don't think it worth the trouble.
 
+<br />
+
 </SectionWrapper>
+
+<AsciiHr />
 
 <SectionWrapper title="counter.dev what does it offer">
 
@@ -60,13 +63,15 @@ two things
 
 <SectionWrapper title="second">
 
-## Setting up in NextJS is a breeze!
+## Setting it up in NextJS is a breeze!
 
 #### Well setting it up anywhere will be a breeze
 
 <br />
 
 Here's what you should insert into you custom \_document.js inside Next Head.
+
+##### You will get your own tracking script, right after you make an account.
 
 ```javascript
 <script
@@ -76,53 +81,86 @@ Here's what you should insert into you custom \_document.js inside Next Head.
 ></script>
 ```
 
-##### You will get your own tracking script, right after you make an account.
-
 </SectionWrapper>
 
 <SectionWrapper title="Third">
 
-## Just glimpse over their clean UI
+## Just glimpse over their UI
 
 <br />
+<Grid>
+  <GridElement w="100%">
+    <NextImg
+      alt="dashboard-1"
+      src="/static/images/analytics/dashboard-1.png"
+      objectFit="scale-down"
+      ratio={16 / 9}
+    />
 
-Put image here
+  </GridElement>
+  <GridElement>
+    <NextImg
+      alt="dashboard-1"
+      src="/static/images/analytics/dashboard-2.png"
+      objectFit="scale-down"
+      ratio={16 / 9}
+    />
+  </GridElement>
+  <GridElement>
+    <NextImg
+      alt="dashboard-1"
+      src="/static/images/analytics/dashboard-3.png"
+      objectFit="scale-down"
+      ratio={16 / 9}
+    />
+  </GridElement>
+  <GridElement>
+    <NextImg
+      alt="dashboard-1"
+      src="/static/images/analytics/dashboard-4.png"
+      objectFit="scale-down"
+      ratio={16 / 9}
+    />
+  </GridElement>
+</Grid>
 
 </SectionWrapper>
+
+<AsciiHr />
 
 <SectionWrapper title="Conclusion - counter.dev">
 
 ## Conclusion
 
-#### Subscribe to my newsletter, to get notified about new blogs
+#### Counter.dev is a nice tool, for someone who is looking to provide private and simple tracking
 
 <br />
 
-Beware [Counter.dev](https://counter.dev/) wouldn't be a good solution for
+Proceed with caution as,
+[Counter.dev](https://counter.dev/) wouldn't be a good solution for
 you if you need thorough analytics.
 
 <br />
 
-It can be easily blocked by an ad blocker, as this is privacy
-first solution and I do not think they will ever change their
-approach to the way they do business.
+It can be easily blocked by an ad blocker, as it's privacy
+first solution and it's not going to change.
 
 <br />
 
-I still urge you to check it out, it's an open source project and
+I still urge you to check it out, it's an open source project,
 you can always fork it, add the extras which will suit your needs.
-And what you really need to ask yourself, how much of analytics I really need?
-For most of the use cases, you want a simple tool that is easily manageable.
+And what you really need to ask yourself, `how much of analytics I really need?`
+For the rest of us, a simple tool that is easily manageable is to-go option.
 
 <br />
 
-Most of us are busy with our life's and jobs. There's little time to waste
-on google's bloat or paid solutions which will give you a headache due
-to a learning curve.
+We are busy people after all. There's little time to waste
+on google's unwelcoming UI and privacy concerns
+or paid solutions which probably won't bring much to a hobby project.
 
 <br />
 
-This the end, my dear friend. Do not for get to subscribe. 🔨
+This the end, my dear friend. [Subscribe](/newsletter) if you like what you're seeing. 🔨
 
 <br />
 
