--- a/data/posts/analytics.mdx
+++ b/data/posts/analytics.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Analytics in you blog'
+title: 'Privacy-first analytics for your website'
 date: '08/09/21'
-description: Counter.dev - choosing privacy first analytics tool for your website or blog
+description: Counter.dev - choosing privacy-first analytics tool for your website or blog
 keywords: javascript, react, misc, analytics, counter.dev, nextjs
 bannerUrl: static/images/analytics/banner.gif
 bannerCredit: Photo by [6VRC](https://www.deviantart.com/6vcr) on
