fix: snippets styles & data

--- a/data/snippets/useMediaQuerySSR.mdx
+++ b/data/snippets/useMediaQuerySSR.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'useMediaQuerySSR()'
-description: 'Parse an email from a URL.'
-keywords: javascript, react, nextjs, chakraui, materialui, emotion, ssr, proper hydration
-tools: [javascript, react]
+description: 'Media queries done right with SSR'
+keywords: javascript, react, nextjs, proper hydration, react hooks
+tools: [javascript, react, reack-hooks]
 logo: null
 ---
 
